cmake_minimum_required(VERSION 3.12)

# Pull in SDK (must be before project)

if(NOT DEFINED PICO_SDK_PATH)
    set(PICO_SDK_PATH ${PROJECT_SOURCE_DIR}/../../RP2040/pico-sdk)
    message(STATUS "PICO_SDK_PATH = ${PICO_SDK_PATH}")
endif()

include(pico_sdk_import.cmake)

project(pico_examples C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

set(PICO_EXAMPLES_PATH ${PROJECT_SOURCE_DIR})

# Initialize the SDK
pico_sdk_init()

include(example_auto_set_url.cmake)

add_compile_options(
        -Wall
        -Wno-format          # int != int32_t as far as the compiler is concerned because gcc has int32_t as long int
        -Wno-unused-function # we have some for the docs that aren't called
        -Wno-maybe-uninitialized
        )

# Add Azure IoT SDK example
add_subdirectory(pico-azure-iot-sdk-c)
