add_library(AzureSDK STATIC
#"src/certs.c"
"src/agenttime.c"
"src/platform.c"
"src/netif.c"
"src/netutil.c"
"src/tcpsocketconnection_c.c"
#"src/socketio_mbed.c"
"${AZURE_SDK_DIR}/c-utility/adapters/socketio_mbed.c"
"src/tlsio_mbedtls.c"
"src/lock.c"
"src/threadapi_nonos.c"
"src/tickcounter_nonos.c"
#"${AZURE_SDK_DIR}/c-utility/pal/socket_async.c"
"${AZURE_SDK_DIR}/c-utility/adapters/httpapi_compact.c"
"${AZURE_SDK_DIR}/certs/certs.c"
"${AZURE_SDK_DIR}/c-utility/pal/tlsio_options.c"
"${AZURE_SDK_DIR}/c-utility/src/xlogging.c"
"${AZURE_SDK_DIR}/c-utility/src/singlylinkedlist.c"
"${AZURE_SDK_DIR}/c-utility/src/buffer.c"
"${AZURE_SDK_DIR}/c-utility/src/consolelogger.c"
"${AZURE_SDK_DIR}/c-utility/src/constbuffer.c"
"${AZURE_SDK_DIR}/c-utility/src/constmap.c"
"${AZURE_SDK_DIR}/c-utility/src/crt_abstractions.c"
"${AZURE_SDK_DIR}/c-utility/src/doublylinkedlist.c"
"${AZURE_SDK_DIR}/c-utility/src/gballoc.c"
"${AZURE_SDK_DIR}/c-utility/src/gb_stdio.c"
"${AZURE_SDK_DIR}/c-utility/src/gb_time.c"
"${AZURE_SDK_DIR}/c-utility/src/hmac.c"
"${AZURE_SDK_DIR}/c-utility/src/hmacsha256.c"
"${AZURE_SDK_DIR}/c-utility/src/httpapiex.c"
"${AZURE_SDK_DIR}/c-utility/src/httpapiexsas.c"
"${AZURE_SDK_DIR}/c-utility/src/httpheaders.c"
"${AZURE_SDK_DIR}/c-utility/src/map.c"
"${AZURE_SDK_DIR}/c-utility/src/optionhandler.c"
"${AZURE_SDK_DIR}/c-utility/src/sastoken.c"
"${AZURE_SDK_DIR}/c-utility/src/sha1.c"
"${AZURE_SDK_DIR}/c-utility/src/sha224.c"
"${AZURE_SDK_DIR}/c-utility/src/sha384-512.c"
"${AZURE_SDK_DIR}/c-utility/src/strings.c"
"${AZURE_SDK_DIR}/c-utility/src/string_token.c"
"${AZURE_SDK_DIR}/c-utility/src/string_tokenizer.c"
"${AZURE_SDK_DIR}/c-utility/src/urlencode.c"
"${AZURE_SDK_DIR}/c-utility/src/usha.c"
"${AZURE_SDK_DIR}/c-utility/src/vector.c"
"${AZURE_SDK_DIR}/c-utility/src/xio.c"
"${AZURE_SDK_DIR}/c-utility/src/azure_base64.c"
"${AZURE_SDK_DIR}/iothub_client/src/iothubtransport_mqtt_common.c"
"${AZURE_SDK_DIR}/iothub_client/src/iothub_device_client_ll.c"
"${AZURE_SDK_DIR}/iothub_client/src/iothub_client_ll.c"
"${AZURE_SDK_DIR}/iothub_client/src/iothub_client_core_ll.c"
"${AZURE_SDK_DIR}/iothub_client/src/iothub_client_ll_uploadtoblob.c"
"${AZURE_SDK_DIR}/iothub_client/src/iothub_client_authorization.c"
"${AZURE_SDK_DIR}/iothub_client/src/iothub_client_retry_control.c"
"${AZURE_SDK_DIR}/iothub_client/src/iothub_client_diagnostic.c"
"${AZURE_SDK_DIR}/iothub_client/src/iothub_message.c"
"${AZURE_SDK_DIR}/iothub_client/src/iothubtransport.c"
"${AZURE_SDK_DIR}/iothub_client/src/iothubtransportmqtt.c"
"${AZURE_SDK_DIR}/iothub_client/src/iothubtransporthttp.c"
"${AZURE_SDK_DIR}/iothub_client/src/iothubtransport_mqtt_common.c"
"${AZURE_SDK_DIR}/iothub_client/src/iothub_transport_ll_private.c"
"${AZURE_SDK_DIR}/iothub_client/src/version.c"
"${AZURE_SDK_DIR}/umqtt/src/mqtt_client.c"
"${AZURE_SDK_DIR}/umqtt/src/mqtt_codec.c"
"${AZURE_SDK_DIR}/umqtt/src/mqtt_message.c"
"${AZURE_SDK_DIR}/deps/parson/parson.c"
"${AZURE_SDK_DIR}/serializer/src/codefirst.c"
"${AZURE_SDK_DIR}/serializer/src/agenttypesystem.c"
"${AZURE_SDK_DIR}/serializer/src/commanddecoder.c"
"${AZURE_SDK_DIR}/serializer/src/datamarshaller.c"
"${AZURE_SDK_DIR}/serializer/src/datapublisher.c"
"${AZURE_SDK_DIR}/serializer/src/dataserializer.c"
"${AZURE_SDK_DIR}/serializer/src/iotdevice.c"
"${AZURE_SDK_DIR}/serializer/src/jsondecoder.c"
"${AZURE_SDK_DIR}/serializer/src/jsonencoder.c"
"${AZURE_SDK_DIR}/serializer/src/methodreturn.c"
"${AZURE_SDK_DIR}/serializer/src/multitree.c"
"${AZURE_SDK_DIR}/serializer/src/schema.c"
"${AZURE_SDK_DIR}/serializer/src/schemalib.c"
"${AZURE_SDK_DIR}/serializer/src/schemaserializer.c"
"${AZURE_SDK_DIR}/iothub_client/src/iothub.c"
"${AZURE_SDK_DIR}/c-utility/src/http_proxy_io.c"
"${AZURE_SDK_DIR}/c-utility/src/azure_base32.c"
"${AZURE_SDK_DIR}/provisioning_client/src/prov_device_client.c"
"${AZURE_SDK_DIR}/provisioning_client/src/prov_transport_mqtt_client.c"
"${AZURE_SDK_DIR}/provisioning_client/src/prov_transport_mqtt_common.c"
"${AZURE_SDK_DIR}/provisioning_client/src/prov_security_factory.c"
"${AZURE_SDK_DIR}/provisioning_client/src/prov_device_ll_client.c"
"${AZURE_SDK_DIR}/provisioning_client/src/iothub_security_factory.c"
"${AZURE_SDK_DIR}/provisioning_client/src/iothub_auth_client.c"
"${AZURE_SDK_DIR}/provisioning_client/src/prov_auth_client.c"
"${AZURE_SDK_DIR}/provisioning_client/adapters/hsm_client_data.c"
"${AZURE_SDK_DIR}/provisioning_client/adapters/hsm_client_tpm.c"
"${AZURE_SDK_DIR}/provisioning_client/adapters/hsm_client_key.c"
"${AZURE_SDK_DIR}/provisioning_client/deps/utpm/src/tpm_codec.c"
"${AZURE_SDK_DIR}/provisioning_client/deps/utpm/src/Marshal.c"
"${AZURE_SDK_DIR}/provisioning_client/deps/utpm/src/tpm_comm_emulator.c"
"${AZURE_SDK_DIR}/provisioning_client/deps/utpm/src/Memory.c"
#"src/tpm_socket_comm.c"
#"${AZURE_SDK_DIR}/provisioning_client/deps/utpm/src/tpm_socket_comm.c"
)

target_include_directories(AzureSDK PUBLIC
"./inc"
"${WIZNET_DIR}/Ethernet"
"${WIZNET_DIR}/Internet/dhcp"
"${WIZNET_DIR}/Internet/dns"
"${WIZNET_DIR}/Internet/SNTP"
"${MBEDTLS_LIB_DIR}/include"
"${AZURE_SDK_DIR}/certs"
"${AZURE_SDK_DIR}/c-utility/inc"
"${AZURE_SDK_DIR}/c-utility/deps/azure-macro-utils-c/inc"
"${AZURE_SDK_DIR}/c-utility/deps/umock-c/inc"
"${AZURE_SDK_DIR}/c-utility/pal/inc"
"${AZURE_SDK_DIR}/c-utility/pal/freertos"
"${AZURE_SDK_DIR}/c-utility/pal/generic"
"${AZURE_SDK_DIR}/iothub_client/inc"
"${AZURE_SDK_DIR}/umqtt/inc"
"${AZURE_SDK_DIR}/umqtt/inc/azure_umqtt_c"
"${AZURE_SDK_DIR}/serializer/inc"
"${AZURE_SDK_DIR}/deps/parson"
"${AZURE_SDK_DIR}/provisioning_client/inc"
"${AZURE_SDK_DIR}/provisioning_client/adapters"
"${AZURE_SDK_DIR}/provisioning_client/deps/utpm/inc"
)

add_definitions(-DUSE_MQTT)
#add_definitions(-DUSE_HTTP)
add_definitions(-DDONT_USE_UPLOADTOBLOB)
add_definitions(-DUSE_PROV_MODULE)
#add_definitions(-DHSM_TYPE_SYMM_KEY)
add_definitions(-DHSM_TYPE_X509)
add_definitions(-DUSE_AZURE_CLOUD_RSA_CERT)
#add_definitions(-DUSE_BALTIMORE_CERT)
#add_definitions(-DUSE_MICROSOFTAZURE_DE_CERT)
#add_definitions(-DUSE_PORTAL_AZURE_CN_CERT)

target_link_libraries(AzureSDK PUBLIC
pico_stdlib
ETHERNET_FILES
SNTP_FILES
)
